--- a/reserved.html
+++ b/reserved.html
@@ -10,7 +10,7 @@
 
 <header>
   <div class="container">
-    <h1>Taniti</h1>
+    <h1 class="site-title"><a href="index.html">Taniti</a></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
